--- a/CTF/0923.md
+++ b/CTF/0923.md
@@ -1,1 +1,18 @@
+```
+!pip install pycrypto
+```
+```
+from Crypto.Cipher import AES
 
+obj = AES.new('This is a key123', AES.MODE_CBC, 'This is an IV456')
+
+message = "flag(HappyCrypt)"
+
+ciphertext = obj.encrypt(message)
+ciphertext
+```
+```
+obj2 = AES.new('This is a key123', AES.MODE_CBC, 'This is an IV456')
+
+obj2.decrypt(ciphertext)
+```
