--- a/CTF/密碼學/04.md
+++ b/CTF/密碼學/04.md
@@ -13,8 +13,10 @@ while i >= 0:
 
 print(translated)
 ```
+```
 ================ RESTART: C:/Users/User/Desktop/reverseCipher.py ===============
 .daed era meht fo owt fi ,terces a peek nac eerhT
+```
 ### comparison operator
 ```
 <
@@ -23,3 +25,91 @@ print(translated)
 >=
 == 等於
 != 不等於
+```
+### while
+```
+#Reverse Cipher
+
+message = "Three can keep a secret, if two of them are dead."
+translated = ""
+
+i = len(message)-1
+while i >= 0:
+    translated = translated + message[i]
+    print('i is',i,',message[i] is',message[i],',translated is',translated)
+    i = i-1
+
+print(translated)
+```
+```
+i is 48 ,message[i] is . ,translated is .
+i is 47 ,message[i] is d ,translated is .d
+i is 46 ,message[i] is a ,translated is .da
+i is 45 ,message[i] is e ,translated is .dae
+i is 44 ,message[i] is d ,translated is .daed
+i is 43 ,message[i] is   ,translated is .daed 
+i is 42 ,message[i] is e ,translated is .daed e
+i is 41 ,message[i] is r ,translated is .daed er
+i is 40 ,message[i] is a ,translated is .daed era
+i is 39 ,message[i] is   ,translated is .daed era 
+i is 38 ,message[i] is m ,translated is .daed era m
+i is 37 ,message[i] is e ,translated is .daed era me
+i is 36 ,message[i] is h ,translated is .daed era meh
+i is 35 ,message[i] is t ,translated is .daed era meht
+i is 34 ,message[i] is   ,translated is .daed era meht 
+i is 33 ,message[i] is f ,translated is .daed era meht f
+i is 32 ,message[i] is o ,translated is .daed era meht fo
+i is 31 ,message[i] is   ,translated is .daed era meht fo 
+i is 30 ,message[i] is o ,translated is .daed era meht fo o
+i is 29 ,message[i] is w ,translated is .daed era meht fo ow
+i is 28 ,message[i] is t ,translated is .daed era meht fo owt
+i is 27 ,message[i] is   ,translated is .daed era meht fo owt 
+i is 26 ,message[i] is f ,translated is .daed era meht fo owt f
+i is 25 ,message[i] is i ,translated is .daed era meht fo owt fi
+i is 24 ,message[i] is   ,translated is .daed era meht fo owt fi 
+i is 23 ,message[i] is , ,translated is .daed era meht fo owt fi ,
+i is 22 ,message[i] is t ,translated is .daed era meht fo owt fi ,t
+i is 21 ,message[i] is e ,translated is .daed era meht fo owt fi ,te
+i is 20 ,message[i] is r ,translated is .daed era meht fo owt fi ,ter
+i is 19 ,message[i] is c ,translated is .daed era meht fo owt fi ,terc
+i is 18 ,message[i] is e ,translated is .daed era meht fo owt fi ,terce
+i is 17 ,message[i] is s ,translated is .daed era meht fo owt fi ,terces
+i is 16 ,message[i] is   ,translated is .daed era meht fo owt fi ,terces 
+i is 15 ,message[i] is a ,translated is .daed era meht fo owt fi ,terces a
+i is 14 ,message[i] is   ,translated is .daed era meht fo owt fi ,terces a 
+i is 13 ,message[i] is p ,translated is .daed era meht fo owt fi ,terces a p
+i is 12 ,message[i] is e ,translated is .daed era meht fo owt fi ,terces a pe
+i is 11 ,message[i] is e ,translated is .daed era meht fo owt fi ,terces a pee
+i is 10 ,message[i] is k ,translated is .daed era meht fo owt fi ,terces a peek
+i is 9 ,message[i] is   ,translated is .daed era meht fo owt fi ,terces a peek 
+i is 8 ,message[i] is n ,translated is .daed era meht fo owt fi ,terces a peek n
+i is 7 ,message[i] is a ,translated is .daed era meht fo owt fi ,terces a peek na
+i is 6 ,message[i] is c ,translated is .daed era meht fo owt fi ,terces a peek nac
+i is 5 ,message[i] is   ,translated is .daed era meht fo owt fi ,terces a peek nac 
+i is 4 ,message[i] is e ,translated is .daed era meht fo owt fi ,terces a peek nac e
+i is 3 ,message[i] is e ,translated is .daed era meht fo owt fi ,terces a peek nac ee
+i is 2 ,message[i] is r ,translated is .daed era meht fo owt fi ,terces a peek nac eer
+i is 1 ,message[i] is h ,translated is .daed era meht fo owt fi ,terces a peek nac eerh
+i is 0 ,message[i] is T ,translated is .daed era meht fo owt fi ,terces a peek nac eerhT
+.daed era meht fo owt fi ,terces a peek nac eerhT
+>>> 
+```
+```
+#Reverse Cipher
+
+message =input('Enter message:')
+translated = ""
+
+i = len(message)-1
+while i >= 0:
+    translated = translated + message[i]
+    i = i-1
+
+print(translated)
+```
+```
+================ RESTART: C:/Users/User/Desktop/reverseCipher.py ===============
+Enter message:abcdefg
+gfedcba
+>>> 
+
