--- a/CTF/密碼學/04.md
+++ b/CTF/密碼學/04.md
@@ -112,4 +112,41 @@ print(translated)
 Enter message:abcdefg
 gfedcba
 >>> 
+```
+```
+What does the following piece of code print to the screen?
+print(len('Hello') + len('Hello'))
 
+ANSWER: 10 (Both calls to len() return integer values, and the 5s add to the integer value 10, which is printed on the screen.)
+
+What does this code print?
+i = 0
+while i < 3:
+print('Hello')
+i = i + 1
+
+ANSWER: Hello
+Hello
+Hello
+
+How about this code?
+i = 0
+spam = 'Hello'
+while i < 5:
+spam = spam + spam[i]
+i = i + 1
+print(spam)
+
+ANSWER: HelloHello
+
+And this?
+i = 0
+while i < 4:
+while i < 6:
+i = i + 2
+print(i)
+
+ANSWER: 2
+4
+6
+```
