--- a/CTF/密碼學/05.md
+++ b/CTF/密碼學/05.md
@@ -12,10 +12,10 @@ message = 'This is my secret message.'
 key = 13
 
 # Whether the program encrypts or decrypts:
-mode = 'encrypt' # Set to either 'encrypt' or 'decrypt'.
+mode = 'decrypt' # Set to either 'encrypt' or 'decrypt'.
 
 #Every possible symbol that can be encrypted:
-STMBOLS = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 !?.'
+SYMBOLS = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 !?.'
 
 #Store the encrypted/decrypted form of the message:
 translated = ''
@@ -27,9 +27,9 @@ for symbol in message:
 
         #Perform encryption/decryption:
         if mode == 'encrypt':
-            translatedIndex = symboIndex + key
+            translatedIndex = symbolIndex + key
         elif mode == 'decrypt':
-            translatedIndex = symboIndex - key
+            translatedIndex = symbolIndex - key
 
         # Handle wraparound, if needed:
         if symbolIndex >= len(SYMBOLS):
