--- a/CTF/密碼學/05.md
+++ b/CTF/密碼學/05.md
@@ -50,3 +50,57 @@ pyperclip.copy(translated)
 ```
 GUVfxVfxZlxfRPeRgxZRffNTR1
 ```
+```
+Using caesarCipher.py, encrypt the following sentences with the given keys:
+'"You can show black is white by argument," said Filby, "but you will never convince me."' with key 8
+
+ANSWER: "gw3EkivE1pw5EjtiksEq1E5pq2mEj7Eizo3umv2,"E1iqlENqtj7,E"j32E7w3E5qttEvm4mzEkwv4qvkmEumH"
+
+'1234567890' with key 21
+
+ANSWER: HIJKLMNOPQ
+
+Using caesarCipher.py, decrypt the following ciphertexts with the given keys:
+'Kv?uqwpfu?rncwukdng?gpqwijB' with key 2
+
+ANSWER: It sounds plausible enough.
+
+'XCBSw88S18A1S 2SB41SE .8zSEwAS50D5A5x81V' with key 22
+
+ANSWER: But all else of the world was invisible.
+
+Which Python instruction would import a module named watermelon.py?
+
+ANSWER: import watermelon
+
+What do the following pieces of code display on the screen?
+spam = 'foo'
+for i in spam:
+spam = spam + i
+print(spam)
+
+ANSWER: foofoo
+
+if 10 < 5:
+print('Hello')
+elif False:
+print('Alice')
+elif 5 != 5:
+print('Bob')
+else:
+print('Goodbye')
+
+ANSWER: Goodbye
+
+print('f' not in 'foo')
+
+ANSWER: False
+
+print('foo' in 'f')
+
+ANSWER: False
+
+print('hello'.find('oo'))
+
+ANSWER: -1 (The find() method returns -1 when it can't find the string.)
+```
